# rust-assimp

./: .travis.yml  Cargo.toml  README.md
examples/model/: Cargo.toml
examples/model/src/: main.rs
examples/skeletal/: Cargo.toml  README.md
examples/skeletal/src/: main.rs
src/: animation.rs  camera.rs  fileio.rs  importer.rs  info.rs  lib.rs  light.rs  log.rs  material.rs  mesh.rs  postprocess.rs  property.rs  scene.rs  texture.rs  types.rs  util.rs
src/ffi/: cexport.rs  cimport.rs  info.rs  log.rs  material.rs  mod.rs  rawscene.rs  types.rs
