[package]
name = "model"
version = "0.0.1"
authors = ["Jeremy Croft <jemcroft@gmail.com>"]

[[bin]]
name = "model"


[dependencies.rust-assimp]
path = "../../"

[dependencies.piston3d-cam]
git = "https://github.com/PistonDevelopers/cam"

[dependencies.pistoncore-event]
git = "https://github.com/PistonDevelopers/event"

[dependencies.pistoncore-glfw_window]
git = "https://github.com/PistonDevelopers/glfw_window"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
